Fixed issues with bottom navbar icons on mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 :root {
   height: 100%;
-  font-size: 16px;
+  --font-size: 16px;
   --fontfam-primary: 'PT Serif' , sans-serif;
   --fontfam-secondary: 'Permanent Marker', cursive;
 }
 
 body {
   font-family: var(--fontfam-secondary);
+  font-size: var(--font-size);
   margin: 0;
   padding: 0;
   display: inline-block;
 
   --bg-postcomment-color: #FFFFFF;
-
 }
 
 /* Theme css color switching */
@@ -33,7 +33,16 @@ body {
   --reply-icon-color : invert(91%) sepia(18%) saturate(7094%) hue-rotate(155deg) brightness(97%) contrast(97%);
 }
 
+button.nav-link{
+  background: var(--bg-primary-color);
+  font-family: var(--fontfam-secondary);
+  font-size: var(--font-size);
+  border: none;
+}
 
+button.nav-link:focus {
+  outline:0;
+}
 
 #display-theme-icon {
   display: block;
@@ -137,6 +146,7 @@ flex-direction: column;
 
 .icon-pg-header {
   font-family: var(--fontfam-secondary);
+  width:200px;
 }
 
 .right-aligned-pg-header {
@@ -174,17 +184,17 @@ flex-direction: column;
 @media only screen and (max-width: 600px) {
 
   body {
-    margin-bottom: 60px; /* Margin to prevent overlap with navbar at bottom  */
+    padding-bottom: 60px; /* Margin to prevent overlap with navbar at bottom  */
   }
 
 
 .navbar {
   position: fixed;
-  overflow: hidden;
   bottom: 0;
   left: 0;
   width: 100vw;
   height: 60px;
+  border-top: solid var(--bg-secondary-color);
 }
 
 .navbar-nav {
